--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -646,9 +646,14 @@ h2.outline-only {
 /* New row: stats on left, media on right */
 .project-info-row {
   display: flex;
-  gap: 2.5rem;
+  gap: 1.5rem;
   align-items: flex-start;
-  margin-top: 0.5rem;
+  margin: 0.5rem .5rem 1rem .5rem ;
+  padding: 0.5rem 2.5rem 0.5rem 2.5rem;
+  border: 2px solid rgba(69, 69, 69, 0.542);
+  border-radius: 9px;
+  background: #0206179d;
+  box-shadow: 0 18px 45px rgba(0, 0, 0, 0.45);
 }
 
 .project-info-left {
@@ -657,7 +662,7 @@ h2.outline-only {
 }
 
 .project-info-left p {
-  margin: 1.1rem 0;
+  margin: 0.1rem 0;
 }
 
 .project-info-right {
@@ -729,7 +734,7 @@ h2.outline-only {
 
 .project-text {
   font-size: 1.02rem;          /* keep or tweak size */
-  line-height: 1.7;
+  line-height: 1.4;
   max-width: 68rem;
   margin: 0 auto 1.6rem;
   
@@ -739,12 +744,14 @@ h2.outline-only {
 /* Optional: extra “ink” look if your font supports it */
 .project-text-strong {
   font-weight: 350;
+  line-height: 1.4;
+
 }
 
 
 .back-home-button {
   position: absolute;
-  top: -2.5rem;
+  top: -3.5rem;
   left: -1rem;
   padding: 0.15rem 0.65rem;
   border-radius: 999px;
