--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -131,12 +131,14 @@
 }
 
 /* per-tag colors */
+.tag-roblox,
 .tag-unity {
   background: rgba(56, 189, 248, 0.15);
   border: 1.5px solid rgb(255, 255, 255);
   border-color: rgba(56, 189, 248, 0.8);
 }
 
+.tag-lua,
 .tag-csharp {
   background: rgba(168, 85, 247, 0.15);
   border: 1.5px solid rgb(255, 255, 255);
@@ -182,7 +184,7 @@
   border-color: rgba(94, 255, 1, 0.8);
 }
 
-.tag-prototype {
+.tag-forsale {
   background: rgba(101, 99, 99, 0.15);
   border: 1.5px solid rgb(255, 255, 255);
   border-color: rgba(17, 17, 17, 0.8);
